--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <div id="wrapper">
-      <h1>Note Scraper</h1>
-      <h2><i>If you can do this...the homework should be no problem.</i></h2>
+      <h1>Scrapezilla!</h1>
+      <h2><i>Scrapezilla says, "You should read more NPR News GWARRRRR!!!!</i></h2>
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
